Remove material dropdowns
None of the datepickers are working with it

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -25,7 +25,8 @@
 @import "popover";
 @import "cards";
 @import "modal";
-@import "dropdown";
+// This doesnt work
+//@import "dropdown";
 @import "drawer";
 @import "themes";
 
